--- a/src/main/resources/templates/addUser.html
+++ b/src/main/resources/templates/addUser.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Agregar nuevo Empleado - Ciclo3</title>
+  <title> Agregar nuevo Empleado </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -23,7 +23,7 @@
   <h1> Agregue aqui los datos del Empleado</h1>
   <br>
 
-  <form th:action="@{/GuardarEmpleado}" th:object="${empl}" method="post">
+  <form th:action="@{/saveuser}" th:object="${user}" method="post">
 
     <div class="row">
       <div class="form-group col-md-12">
@@ -58,8 +58,8 @@
         <label class="col-md-3" for="rol">Rol del empleado:</label>
         <div class="col-md-6">
           <select th:field="*{rol}" class="form-control" id="rol" required="required">
-            <option th:value=1>Administrativo</option>
-            <option th:value=2>Operativo</option>
+            <option th:value=1>administrativo</option>
+            <option th:value=2>operativo</option>
           </select>
         </div>
       </div>
