Front Empresa/enlace con empleado

--- a/src/main/resources/templates/viewEnterprises.html
+++ b/src/main/resources/templates/viewEnterprises.html
@@ -14,7 +14,7 @@
     color:white;
     }
     a:hover {
-    color: #616A6B;
+    color: black;
     text-decoration:none;
     }
     </style>
@@ -32,8 +32,10 @@
                 <th>Telefono</th>
                 <th>NIT</th>
 
+                <th>Empleados</th>
                 <th>Editar</th>
                 <th>Eliminar</th>
+
             </tr>
 
             <tr th:each="empresa : ${enterpriseList}"> <!--el modelo guarda la lista de todas las empr-->
@@ -43,14 +45,15 @@
                 <td th:text="${empresa.telefono}"></td>
                 <td th:text="${empresa.nit}"></td>
 
-
+                <td><button type="button" class="btn btn-info"><a th:href="@{/enterprise/{id}/users(id=${empresa.id})}">Ver</a></button></td>
                 <td><button type="button" class="btn btn-warning"><a th:href="@{/editenterprise/{id}(id=${empresa.id})}">Editar</a></button></td>
                 <td><button type="button" class="btn btn-danger"><a th:href="@{/deleteenterprise/{id}(id=${empresa.id})}">Eliminar</a></button></td>
             </tr>
         </table>
 
             <button type="button" class="btn btn-info"><a th:href="@{/addenterprise}">Agregar Nueva Empresa</a></button>
-
+            <br><br>
+            <button type="button" class="btn btn-primary"><a th:href="@{/viewusers}">Ver Lista de Empleados</a></button>
     </div>
 
 
