--- a/src/main/resources/templates/viewUsers.html
+++ b/src/main/resources/templates/viewUsers.html
@@ -52,7 +52,7 @@
   <button type="button" class="btn btn-info"><a th:href="@{/adduser}">Agregar Nuevo Empleado</a></button>
   <br><br>
 
-  <button type="button" class="btn btn-primary"><a th:href="@{/viewuser}">Ver lista de Empresas</a></button>
+  <button type="button" class="btn btn-primary"><a th:href="@{/viewenterprises}">Ver lista de Empresas</a></button>
 </div>
 
 <script th:inline="javascript">
@@ -66,7 +66,7 @@
             Command : toastr["success"]("Empleado actualizado con éxito!")
         }
         else if (msg == "it was deleted"){
-            Command : toastr["error"]("Registro de empleado eliminado con éxito!")
+            Command : toastr["danger"]("Registro de empleado eliminado con éxito!")
         }
         else if (msg == "error deleting"){
             Command : toastr["error"]("Registro de empleado no ha sido eliminado!")
