--- a/src/main/resources/templates/addUser.html
+++ b/src/main/resources/templates/addUser.html
@@ -44,10 +44,10 @@
 
     <div class="row">
       <div class="form-group col-md-12">
-        <label class="col-md-3" for="empresa">Empresa a la que pertence:</label>
+        <label class="col-md-3" for="empresa_id">Empresa a la que pertence:</label>
         <div class="col-md-6">
-          <select th:field="*{empresa}" class="form-control" id="empresa" required="required">
-            <option th:each="empresa : ${emprelist}" th:text="${empresa.nombre}" th:value="${empresa.id}"></option>
+          <select th:field="*{empresa}" class="form-control" id="empresa_id" required="required">
+            <option th:each="empresa : ${UserList}" th:text="${empresa.nombre}" th:value="${empresa.id}"></option>
           </select>
         </div>
       </div>
