--- a/src/main/resources/templates/viewUsers.html
+++ b/src/main/resources/templates/viewUsers.html
@@ -43,7 +43,7 @@
     <td th:text="${empleado.empresa.nombre}"></td>
     <td th:if="${empleado.rol=='1'}">administrativo</td>
     <td th:if="${empleado.rol=='2'}">operativo</td>
-    <td><button type="button" class="btn btn-info"><a th:href="@{/user/{id}/movements(id=${empleado.id})}">Ver</a></button></td>
+    <td><button type="button" class="btn btn-info"><a th:href="@{/edituser/{id}(id=${empleado.id})}">Ver</a></button></td>
     <td><button type="button" class="btn btn-warning"><a th:href="@{/edituser/{id}(id=${empleado.id})}">Editar</a></button></td>
     <td><button type="button" class="btn btn-danger"><a th:href="@{/deleteuser/{id}(id=${empleado.id})}">Eliminar</a></button></td>
   </tr>
@@ -52,7 +52,7 @@
   <button type="button" class="btn btn-info"><a th:href="@{/adduser}">Agregar Nuevo Empleado</a></button>
   <br><br>
 
-  <button type="button" class="btn btn-primary"><a th:href="@{/enterprise/{id}/users}">Ver lista de Empresas</a></button>
+  <button type="button" class="btn btn-primary"><a th:href="@{/viewenterprises}">Ver lista de Empresas</a></button>
 </div>
 
 <script th:inline="javascript">
