--- a/src/main/resources/templates/addUser.html
+++ b/src/main/resources/templates/addUser.html
@@ -47,7 +47,7 @@
         <label class="col-md-3" for="empresa_id">Empresa a la que pertence:</label>
         <div class="col-md-6">
           <select th:field="*{empresa}" class="form-control" id="empresa_id" required="required">
-            <option th:each="empresa : ${UserList}" th:text="${empresa.nombre}" th:value="${empresa.id}"></option>
+            <option th:each="empresa : ${enterpriseList}" th:text="${empresa.nombre}" th:value="${empresa.id}"></option>
           </select>
         </div>
       </div>
