--- a/src/main/resources/templates/addMovement.html
+++ b/src/main/resources/templates/addMovement.html
@@ -26,7 +26,7 @@
     <h1> Agregue aqui los datos del movimiento</h1>
     <br>
 
-    <form th:action="@{/GuardarMovimiento}" th:object="${mov}" method="post">
+    <form th:action="@{/savemovement}" th:object="${mov}" method="post">
 
         <div class="row">
             <div class="form-group col-md-12">
