--- a/src/main/resources/templates/editMovement.html
+++ b/src/main/resources/templates/editMovement.html
@@ -26,7 +26,7 @@
     <h1> Modifique aquí los datos del movimiento</h1>
     <br>
 
-    <form th:action="@{/ActualizarMovimiento}" th:object="${mov}" method="post">
+    <form th:action="@{/updatemovement}" th:object="${mov}" method="post">
 
         <div class="row">
             <div class="form-group col-md-12">
