--- a/src/main/resources/templates/viewUsers.html
+++ b/src/main/resources/templates/viewUsers.html
@@ -11,7 +11,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
   <style>
     a{
-    color:red;
+    color:black;
     }
     a:hover {
     color: black;
@@ -41,9 +41,9 @@
     <td th:text="${empleado.nombre}"></td>
     <td th:text="${empleado.correo}"></td>
     <td th:text="${empleado.empresa.nombre}"></td>
-    <td th:if="${empleado.rol=='1'}">administrativo</td>
-    <td th:if="${empleado.rol=='2'}">operativo</td>
-    <td><button type="button" class="btn btn-info"><a th:href="@{/edituser/{id}(id=${empleado.id})}">Ver</a></button></td>
+    <td th:if="${empleado.rol=='administrativo'}">administrativo</td>
+    <td th:if="${empleado.rol=='operativo'}">operativo</td>
+    <td><button type="button" class="btn btn-info"><a th:href="@{/editmovement/{id}(id=${empleado.id})}">Ver</a></button></td>
     <td><button type="button" class="btn btn-warning"><a th:href="@{/edituser/{id}(id=${empleado.id})}">Editar</a></button></td>
     <td><button type="button" class="btn btn-danger"><a th:href="@{/deleteuser/{id}(id=${empleado.id})}">Eliminar</a></button></td>
   </tr>
