--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,22 @@
     <title>Home</title>
 </head>
 <body>
+<div class="container">
+    <h1> Lista de Empresas</h1>
+
+    <br><table class="table table-striped">
+    <tr>
+        <th>ID</th>
+        <th>Nombre</th>
+        <th>Direccion</th>
+        <th>Telefono</th>
+        <th>NIT</th>
+
+        <th>Empleados</th>
+        <th>Editar</th>
+        <th>Eliminar</th>
+
+    </tr>
 
 </body>
 </html>
