--- a/src/main/resources/templates/addUser.html
+++ b/src/main/resources/templates/addUser.html
@@ -44,9 +44,9 @@
 
     <div class="row">
       <div class="form-group col-md-12">
-        <label class="col-md-3" for="empresa_id">Empresa a la que pertence:</label>
+        <label class="col-md-3" for="empresa">Empresa a la que pertence:</label>
         <div class="col-md-6">
-          <select th:field="*{empresa}" class="form-control" id="empresa_id" required="required">
+          <select th:field="*{empresa}" class="form-control" id="empresa" required="required">
             <option th:each="empresa : ${enterpriseList}" th:text="${empresa.nombre}" th:value="${empresa.id}"></option>
           </select>
         </div>
@@ -58,8 +58,8 @@
         <label class="col-md-3" for="rol">Rol del empleado:</label>
         <div class="col-md-6">
           <select th:field="*{rol}" class="form-control" id="rol" required="required">
-            <option th:value=1>administrativo</option>
-            <option th:value=2>operativo</option>
+            <option th:value=administrativo>administrativo</option>
+            <option th:value=operativo>operativo</option>
           </select>
         </div>
       </div>
