--- a/src/main/resources/templates/editUsers.html
+++ b/src/main/resources/templates/editUsers.html
@@ -54,7 +54,7 @@
         <label class="col-md-3" for="empresa">Empresa a la que pertence:</label>
         <div class="col-md-6">
           <select th:field="*{empresa}" class="form-control" id="empresa" required="required">
-            <option th:each="empresa : ${EnterpriseList}" th:text="${empresa.nombre}" th:value="${empresa.id}"></option>
+            <option th:each="empresa : ${enterpriseList}" th:text="${empresa.nombre}" th:value="${empresa.id}"></option>
           </select>
         </div>
       </div>
@@ -66,8 +66,8 @@
         <label class="col-md-3" for="rol">Rol del empleado:</label>
         <div class="col-md-6">
           <select th:field="*{rol}" class="form-control" id="rol" required="required">
-            <option th:value=1>administrativo</option>
-            <option th:value=2>operativo</option>
+            <option th:value=administrativo>administrativo</option>
+            <option th:value=operativo>operativo</option>
           </select>
         </div>
       </div>
