--- a/src/main/resources/templates/addMovement.html
+++ b/src/main/resources/templates/addMovement.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
+    "background-color:grey"
     a{
     color:white;
     }
@@ -77,7 +78,7 @@
             <div class="form-group col-md-12">
                 <label class="col-md-3" for="fecha">Fecha del movimiento:</label>
                 <div class="col-md-6">
-                    <input type="date" th:field="*{fecha}" class="form-control" id="fecha" required="required" readonly></div>
+                    <input type="date" th:field="*{fecha}" class="form-control" id="fecha" required="required"></div>
             </div>
         </div>
 
