--- a/src/main/resources/templates/viewMovement.html
+++ b/src/main/resources/templates/viewMovement.html
@@ -30,30 +30,32 @@
     <br><table class="table table-bordered">
     <tr>
         <th>ID</th>
-        <th class="text-right">Valor</th>
         <th>Concepto</th>
+        <th class="text-right">Valor</th>
         <th>Usuario Responsable</th>
+        <th>Empresa </th>
         <th>Fecha del Movimiento</th>
         <th>Editar</th>
         <th>Eliminar</th>
     </tr>
 
 
-    <tr th:each="movimiento : ${movlist}">
-        <td th:text="${movimiento.id}"></td>
-        <td class="text-right" th:text="${#numbers.formatCurrency(movimiento.monto)}"></td>
-        <td th:if="${movimiento.concepto=='1'}">Papeleria</td>
-        <td th:if="${movimiento.concepto=='2'}">Servicios Publicos/privados</td>
-        <td th:if="${movimiento.concepto=='3'}">Operativos</td>
-        <td th:if="${movimiento.concepto=='4'}">Caja Menor</td>
-        <td th:if="${movimiento.concepto=='5'}">Tributario</td>
-        <td th:if="${movimiento.concepto=='6'}">Mobiliario</td>
-        <td th:if="${movimiento.concepto=='7'}">Maquinaria y Equipo</td>
-        <td th:if="${movimiento.concepto=='8'}">Nomina</td>
-        <td th:text="${movimiento.usuario.nombre}"></td>
-        <td th:text="${#dates.format(movimiento.fecha, 'dd/MM/yyyy')}"></td>
-        <td><button type="button" class="btn btn-warning"><a th:href="@{/editmovement/{id}(id=${movimiento.id})}">Editar</a></button></td>
-        <td><button type="button" class="btn btn-danger"><a th:href="@{/deletemovement(id=${movimiento.id})}">Eliminar</a></button></td>
+    <tr th:each="movimiento : ${movementList}">
+        <td th:text="${movement.id}"></td>
+        <td th:if="${movement.concepto=='1'}">Papeleria</td>
+        <td th:if="${movement.concepto=='2'}">Servicios Publicos/privados</td>
+        <td th:if="${movement.concepto=='3'}">Operativos</td>
+        <td th:if="${movement.concepto=='4'}">Caja Menor</td>
+        <td th:if="${movement.concepto=='5'}">Tributario</td>
+        <td th:if="${movement.concepto=='6'}">Mobiliario</td>
+        <td th:if="${movement.concepto=='7'}">Maquinaria y Equipo</td>
+        <td th:if="${movement.concepto=='8'}">Nomina</td>
+        <td class="text-right" th:text="${#numbers.formatCurrency(movement.monto)}"></td>
+        <td th:text="${movement.usuario.nombre}"></td>
+        <td th:text="${movement.enterprise.id}"></td>
+        <td th:text="${#dates.format(movement.fecha, 'dd/MM/yyyy')}"></td>
+        <td><button type="button" class="btn btn-warning"><a th:href="@{/editmovement/{id}(id=${movement.id})}">Editar</a></button></td>
+        <td><button type="button" class="btn btn-danger"><a th:href="@{/deletemovement(id=${movement.id})}">Eliminar</a></button></td>
     </tr>
 </table>
 
@@ -88,16 +90,16 @@
     window.onload=function(){
 
         var msg= [[${mensaje}]];
-        if (msg == "saveOK"){
+        if (msg == "it was saved"){
             Command : toastr["success"]("Movimiento registrado con éxito!")
             }
-        else if (msg == "updateOK"){
+        else if (msg == "it was updated"){
             Command : toastr["success"]("Movimiento actualizado con éxito!")
         }
-        else if (msg == "deleteOK"){
-            Command : toastr["error"]("Movimiento eliminado con éxito!")
+        else if (msg == "it was deleted"){
+            Command : toastr["success"]("Movimiento eliminado con éxito!")
         }
-        else if (msg == "deleteError"){
+        else if (msg == "it was not deleted"){
             Command : toastr["error"]("Movimiento no pudo ser eliminado!")
         }
         toastr.options={
