--- a/src/main/resources/templates/viewMovement.html
+++ b/src/main/resources/templates/viewMovement.html
@@ -11,7 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <style>
     a{
-    color:white;
+    color:black;
     }
     a:hover {
     color: black;
@@ -40,7 +40,7 @@
     </tr>
 
 
-    <tr th:each="movimiento : ${movementList}">
+    <tr th:each="movement : ${movementList}">
         <td th:text="${movement.id}"></td>
         <td th:if="${movement.concepto=='1'}">Papeleria</td>
         <td th:if="${movement.concepto=='2'}">Servicios Publicos/privados</td>
