--- a/src/main/resources/templates/viewUsers.html
+++ b/src/main/resources/templates/viewUsers.html
@@ -11,7 +11,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
   <style>
     a{
-    color:red;
+    color:black;
     }
     a:hover {
     color: black;
@@ -36,16 +36,16 @@
     <th>Eliminar</th>
   </tr>
 
-  <tr th:each="empleado : ${userList}">
-    <td th:text="${empleado.id}"></td>
-    <td th:text="${empleado.nombre}"></td>
-    <td th:text="${empleado.correo}"></td>
-    <td th:text="${empleado.empresa.nombre}"></td>
-    <td th:if="${empleado.rol=='administrativo'}">administrativo</td>
-    <td th:if="${empleado.rol=='operativo'}">operativo</td>
-    <td><button type="button" class="btn btn-info"><a th:href="@{/users/{id}/movements(id=${empleado.id})}">Ver</a></button></td>
-    <td><button type="button" class="btn btn-warning"><a th:href="@{/edituser/{id}(id=${empleado.id})}">Editar</a></button></td>
-    <td><button type="button" class="btn btn-danger"><a th:href="@{/deleteuser/{id}(id=${empleado.id})}">Eliminar</a></button></td>
+  <tr th:each="user : ${userList}">
+    <td th:text="${user.id}"></td>
+    <td th:text="${user.nombre}"></td>
+    <td th:text="${user.correo}"></td>
+    <td th:text="${user.empresa.nombre}"></td>
+    <td th:if="${user.rol=='administrativo'}">administrativo</td>
+    <td th:if="${user.rol=='operativo'}">operativo</td>
+    <td><button type="button" class="btn btn-info"><a th:href="@{/users/{id}/movements(id=${user.id})}">Ver</a></button></td>
+    <td><button type="button" class="btn btn-warning"><a th:href="@{/edituser/{id}(id=${user.id})}">Editar</a></button></td>
+    <td><button type="button" class="btn btn-danger"><a th:href="@{/deleteuser/{id}(id=${user.id})}">Eliminar</a></button></td>
   </tr>
 </table>
 
