Implementation of Auth0 services fro authentication and creation of the index TEmplate

--- a/src/main/resources/templates/viewMovement.html
+++ b/src/main/resources/templates/viewMovement.html
@@ -56,7 +56,7 @@
         <td th:if="${movement.concepto=='12'}">Seguridad Social</td>
         <td class="text-right" th:text="${#numbers.formatCurrency(movement.monto)}"></td>
         <td th:text="${movement.usuario.nombre}"></td>
-        <td th:text="${movement.enterprise}"></td>
+        <td th:text="${movement.usuario.empresa}"></td>
         <td th:text="${#dates.format(movement.fecha, 'dd/MM/yyyy')}"></td>
         <td><button type="button" class="btn btn-warning"><a th:href="@{/editmovement/{id}(id=${movement.id})}">Editar</a></button></td>
         <td><button type="button" class="btn btn-danger"><a th:href="@{/deletemovement/{id}(id=${movement.id})}">Eliminar</a></button></td>
