--- a/src/main/resources/templates/addEnterprise.html
+++ b/src/main/resources/templates/addEnterprise.html
@@ -4,7 +4,7 @@
   <title> Agregar nueva Empresa </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
@@ -20,7 +20,7 @@
 <body>
 
   <div class="container">
-    <h1> Agregue aqui los datos de la Empresa</h1>
+    <h1 class="display-5 fw-bold"> Crear una Nueva Empresa</h1>
     <br>
 
     <form th:action="@{/saveenterprise}" th:object="${enterprise}" method="post">
