--- a/src/main/resources/templates/editEnterprise.html
+++ b/src/main/resources/templates/editEnterprise.html
@@ -4,7 +4,7 @@
   <title>Editar Empresa </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
@@ -20,14 +20,14 @@
 <body>
 
 <div class="container">
-  <h1> Actualice aqui los datos de la Empresa</h1>
+  <h1 class="display-5 fw-bold"> Actualizar los  datos de la Empresa</h1>
   <br>
 
   <form th:action="@{/updateenterprise/{id}}" th:object="${enterprise}" method="post">
 
     <div class="row">
       <div class="form-group col-md-12">
-        <label class="col-md-3" for="id">ID de la Empresa:</label>
+        <label class="col-md-3 fw-bold" for="id">ID de la Empresa:</label>
         <div class="col-md-6">
           <input type="text" th:field="*{id}" class="form-control" id="id" required="required" readonly>
         </div>
@@ -37,7 +37,7 @@
 
     <div class="row">
       <div class="form-group col-md-12">
-        <label class="col-md-3" for="nombre">Nombre de la Empresa:</label>
+        <label class="col-md-3 fw-bold" for="nombre">Nombre de la Empresa:</label>
         <div class="col-md-6">
           <input type="text" th:field="*{nombre}" class="form-control" id="nombre" required="required">
         </div>
@@ -47,7 +47,7 @@
 
     <div class="row">
       <div class="form-group col-md-12">
-        <label class="col-md-3" for="direccion">Direccion de la empresa:</label>
+        <label class="col-md-3 fw-bold" for="direccion">Direccion de la empresa:</label>
         <div class="col-md-6">
           <input type="text" th:field="*{direccion}" class="form-control" id="direccion" required="required"></div>
       </div>
@@ -56,7 +56,7 @@
 
     <div class="row">
       <div class="form-group col-md-12">
-        <label class="col-md-3" for="telefono">Telefono de la empresa:</label>
+        <label class="col-md-3 fw-bold" for="telefono">Telefono de la empresa:</label>
         <div class="col-md-6">
           <input type="text" th:field="*{telefono}" class="form-control" id="telefono" required="required"></div>
       </div>
@@ -64,7 +64,7 @@
 
     <div class="row">
       <div class="form-group col-md-12">
-        <label class="col-md-3" for="NIT">NIT de la empresa:</label>
+        <label class="col-md-3 fw-bold" for="NIT">NIT de la empresa:</label>
         <div class="col-md-6">
           <input type="text" th:field="*{nit}" class="form-control" id="NIT" required="required"></div>
       </div>
@@ -74,14 +74,14 @@
 
     <div class="row">
       <div class="col-md-2">
-        <button class="btn btn-success"> Actualizar Empresa  </button>
+        <button class="btn btn-success fw-bold"> Actualizar Empresa  </button>
       </div>
     </div>
 
   </form>
 
   <br>
-  <a href="javascript: history.go(-1)" class="btn btn-info" role="button">Atrás</a>
+  <a href="javascript: history.go(-1)" class="btn btn-info fw-bold" role="button">Atrás</a>
 
 
 </div>
