--- a/src/main/resources/templates/editUsers.html
+++ b/src/main/resources/templates/editUsers.html
@@ -4,7 +4,7 @@
   <title>Editar Empleado </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
@@ -20,14 +20,14 @@
 <body>
 
 <div class="container">
-  <h1> Actualice aqui los datos del Empleado</h1>
+  <h1 class="display-5 fw-bold"> Actulizar los Datos del Usuario</h1>
   <br>
 
   <form th:action="@{/updateuser}" th:object="${user}" method="post">
 
     <div class="row">
       <div class="form-group col-md-12">
-        <label class="col-md-3" for="id">ID del Empleado:</label>
+        <label class="col-md-3 fw-bold" for="id">ID del Empleado:</label>
         <div class="col-md-6">
           <input type="text" th:field="*{id}" class="form-control" id="id" required="required" readonly></div>
       </div>
@@ -35,7 +35,7 @@
 
     <div class="row">
       <div class="form-group col-md-12">
-        <label class="col-md-3" for="nombre">Nombre del Empleado:</label>
+        <label class="col-md-3 fw-bold" for="nombre">Nombre del Empleado:</label>
         <div class="col-md-6">
           <input type="text" th:field="*{nombre}" class="form-control" id="nombre" required="required"></div>
       </div>
@@ -43,7 +43,7 @@
 
     <div class="row">
       <div class="form-group col-md-12">
-        <label class="col-md-3" for="correo">Correo del empleado:</label>
+        <label class="col-md-3 fw-bold" for="correo">Correo del empleado:</label>
         <div class="col-md-6">
           <input type="email" th:field="*{correo}" class="form-control" id="correo" required="required"></div>
       </div>
@@ -51,7 +51,7 @@
 
     <div class="row">
       <div class="form-group col-md-12">
-        <label class="col-md-3" for="empresa">Empresa a la que pertence:</label>
+        <label class="col-md-3 fw-bold" for="empresa">Empresa a la que pertence:</label>
         <div class="col-md-6">
           <select th:field="*{empresa}" class="form-control" id="empresa" required="required">
             <option th:each="empresa : ${enterpriseList}" th:text="${empresa.nombre}" th:value="${empresa.id}"></option>
@@ -63,7 +63,7 @@
 
     <div class="row">
       <div class="form-group col-md-12">
-        <label class="col-md-3" for="rol">Rol del empleado:</label>
+        <label class="col-md-3 fw-bold" for="rol">Rol del empleado:</label>
         <div class="col-md-6">
           <select th:field="*{rol}" class="form-control" id="rol" required="required">
             <option th:value=administrativo>administrativo</option>
@@ -75,14 +75,14 @@
 
     <div class="row">
       <div class="col-md-2">
-        <button class="btn btn-success">Actualizar empleado</button>
+        <button class="btn btn-success fw-bold">Actualizar empleado</button>
       </div>
     </div>
 
   </form>
 
   <br>
-  <a href="javascript: history.go(-1)" class="btn btn-info" role="button">Atrás</a>
+  <a href="javascript: history.go(-1)" class="btn btn-info fw-bold" role="button">Atrás</a>
 
 </div>
 </body>
