--- a/src/main/resources/templates/viewMovement.html
+++ b/src/main/resources/templates/viewMovement.html
@@ -4,7 +4,7 @@
     <title>Lista de movimientos</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -21,22 +21,22 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container ">
     <p th:inline="text" class="text-right">User: [[${#httpServletRequest.remoteUser}]]</p>
     <button type="button" class="btn btn-danger" style="float:right"><a th:href="@{/logout}">Cerrar Sesión</a></button>
 
-    <h1> Lista de movimientos</h1>
+    <h1 class="display-5 fw-bold"> Lista de movimientos</h1>
 
     <br><table class="table table-bordered">
     <tr>
-        <th>ID</th>
-        <th>Concepto</th>
-        <th class="text-right">Valor</th>
-        <th>Usuario Responsable</th>
-        <th>Empresa </th>
-        <th>Fecha del Movimiento</th>
-        <th>Editar</th>
-        <th>Eliminar</th>
+        <th class="fw-bold">ID</th>
+        <th class="fw-bold">Concepto</th>
+        <th class="text-right fw-bold">Valor</th>
+        <th class="fw-bold">Usuario Responsable</th>
+        <th class="fw-bold">Empresa </th>
+        <th class="fw-bold">Fecha del Movimiento</th>
+        <th class="fw-bold">Editar</th>
+        <th class="fw-bold">Eliminar</th>
     </tr>
 
 
@@ -58,8 +58,8 @@
         <td th:text="${movement.usuario.nombre}"></td>
         <td th:text="${movement.usuario.empresa}"></td>
         <td th:text="${#dates.format(movement.fecha, 'dd/MM/yyyy')}"></td>
-        <td><button type="button" class="btn btn-warning"><a th:href="@{/editmovement/{id}(id=${movement.id})}">Editar</a></button></td>
-        <td><button type="button" class="btn btn-danger"><a th:href="@{/deletemovement/{id}(id=${movement.id})}">Eliminar</a></button></td>
+        <td><button type="button" class="btn btn-warning fw-bold"><a th:href="@{/editmovement/{id}(id=${movement.id})}">Editar</a></button></td>
+        <td><button type="button" class="btn btn-danger fw-bold"><a th:href="@{/deletemovement/{id}(id=${movement.id})}">Eliminar</a></button></td>
     </tr>
 </table>
 
@@ -73,21 +73,21 @@
 
      <div class="row">
         <div class="form-group col-md-12">
-            <label class="col-md-3" for="sumaMontos">Total Movimientos:</label>
+            <label class="col-md-3 fw-bold" for="sumaMontos">Total Movimientos:</label>
             <div class="col-md-6">
-                <p th:text="${#numbers.formatCurrency(sumaMontos)}" class="form-control" id="sumaMontos"></p>
+                <p th:text="${#numbers.formatCurrency(sumaMontos)}" class="form-control fw-bold" id="sumaMontos"></p>
             </div>
         </div>
     </div>
 
 
-    <button type="button" class="btn btn-info"><a th:href="@{/addmovement}">Agregar Nuevo Movimiento</a></button>
+    <button type="button" class="btn btn-info fw-bold"><a th:href="@{/addmovement}">Agregar Nuevo Movimiento</a></button>
     <br><br>
 
-    <button type="button" class="btn btn-primary"><a th:href="@{/viewenterprises}">Ver lista de Empresas</a></button>
+    <button type="button" class="btn btn-primary fw-bold"><a th:href="@{/viewenterprises}">Ver lista de Empresas</a></button>
     <br><br>
 
-    <button type="button" class="btn btn-primary"><a th:href="@{/viewusers}">Ver lista de Empleados</a></button>
+    <button type="button" class="btn btn-primary fw-bold"><a th:href="@{/viewusers}">Ver lista de Empleados</a></button>
 </div>
 
 <script th:inline="javascript">
